--- a/res/layout/activity_test.xml
+++ b/res/layout/activity_test.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical" >
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/uploadStartBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="selectFileOnClick"
@@ -27,7 +27,7 @@
             android:text="TextView" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/stopUploadBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="uploadOnClick"
