--- a/res/layout/activity_backup_item.xml
+++ b/res/layout/activity_backup_item.xml
@@ -32,7 +32,7 @@
         </LinearLayout>
 
         <ListView
-            android:id="@+id/listView1"
+            android:id="@+id/uploadFileList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
         </ListView>
