--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -52,6 +52,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
+            <Button
+                android:id="@+id/viewBakItemBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="viewBakItemOnClick"
+                android:text="@string/viewBakItemBtn" />
+
             <FrameLayout
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent" >
